--- a/Website/CSS/loc_single.css
+++ b/Website/CSS/loc_single.css
@@ -1,8 +1,15 @@
-.ort-einzeln,
-.ort-einzeln * {
+main {
+  margin-top: 5%;
+  padding: 3px;
+  width: 100%;
+  position: relative;
+  min-height: fit-content;
+}
+.place-single,
+.place-single * {
   box-sizing: border-box;
 }
-.ort-einzeln {
+.place-single {
   background: var(--var-sds-color-background-default-default, #ffffff);
   display: flex;
   flex-direction: column;
@@ -36,7 +43,7 @@
   flex-shrink: 0;
   position: relative;
 }
-.title {
+.place-title {
   color: var(--var-sds-color-text-default-default, #1e1e1e);
   text-align: center;
   font-family: var(--title-hero-font-family, "Inter-Bold", sans-serif);
@@ -47,7 +54,7 @@
   position: relative;
   align-self: stretch;
 }
-.subtitle {
+.place-subtitle {
   color: var(--var-sds-color-text-default-secondary, #757575);
   text-align: center;
   font-family: var(--subtitle-font-family, "Inter-Regular", sans-serif);
@@ -127,7 +134,7 @@
   position: relative;
   align-self: stretch;
 }
-.lorem-ipsum-dolor-sit-amet-consetetur-sadipscing-elitr-sed-diam-nonumy-eirmod-tempor-invidunt-ut-labore-et-dolore-magna-aliquyam-erat-sed-diam-voluptua-at-vero-eos-et-accusam-et-justo-duo-dolores-et-ea-rebum-stet-clita-kasd-gubergren-no-sea-takimata-sanctus-est-lorem-ipsum-dolor-sit-amet-lorem-ipsum-dolor-sit-amet-consetetur-sadipscing-elitr-sed-diam-nonumy-eirmod-tempor-invidunt-ut-labore-et-dolore-magna-aliquyam-erat-sed-diam-voluptua-at-vero-eos-et-accusam-et-justo-duo-dolores-et-ea-rebum-stet-clita-kasd-gubergren-no-sea-takimata-sanctus-est-lorem-ipsum-dolor-sit-amet-lorem-ipsum-dolor-sit-amet-consetetur-sadipscing-elitr-sed-diam-nonumy-eirmod-tempor-invidunt-ut-labore-et-dolore-magna-aliquyam-erat-sed-diam-voluptua-at-vero-eos-et-accusam-et-justo-duo-dolores-et-ea-rebum-stet-clita-kasd-gubergren-no-sea-takimata-sanctus-est-lorem-ipsum-dolor-sit-amet-duis-autem-vel-eum-iriure-dolor-in-hendrerit-in-vulputate-velit-esse-molestie-consequat-vel-illum-dolore-eu-feugiat-nulla-facilisis-at-vero-eros-et-accumsan-et-iusto-odio-dignissim-qui-blandit-praesent-luptatum-zzril-delenit-augue-duis-dolore-te-feugait-nulla-facilisi-lorem-ipsum-dolor-sit-amet-consectetuer-adipiscing-elit-sed-diam-nonummy-nibh-euismod-tincidunt-ut-laoreet-dolore-magna-aliquam-erat-volutpat-ut-wisi-enim-ad-minim-veniam-quis-nostrud-exerci-tation-ullamcorper-suscipit-lobortis-nisl-ut-aliquip-ex-ea-commodo-consequat-duis-autem-vel-eum-iriure-dolor-in-hendrerit-in-vulputate-velit-esse {
+.place-description {
   color: var(--var-sds-color-text-default-secondary, #757575);
   text-align: left;
   font-family: var(--body-base-font-family, "Inter-Regular", sans-serif);
@@ -139,383 +146,4 @@
   display: flex;
   align-items: flex-end;
   justify-content: flex-start;
-}
-.footer {
-  background: var(--var-sds-color-background-default-default, #ffffff);
-  border-style: solid;
-  border-color: var(--var-sds-color-border-default-default, #d9d9d9);
-  border-width: 1px 0px 0px 0px;
-  padding: var(--var-sds-size-space-800, 32px)
-    var(--var-sds-size-space-800, 32px) var(--var-sds-size-space-4000, 160px)
-    var(--var-sds-size-space-800, 32px);
-  flex-shrink: 0;
-  width: 1200px;
-  height: 105px;
-  position: absolute;
-  left: 0px;
-  top: 1349px;
-  overflow: hidden;
-}
-.frame-3 {
-  width: 28px;
-  height: 23.72px;
-  position: absolute;
-  left: 149px;
-  top: 32px;
-}
-.group-13 {
-  position: absolute;
-  inset: 0;
-}
-.group-12 {
-  width: 144px;
-  height: 26px;
-  position: static;
-}
-.group-11 {
-  width: 144px;
-  height: 26px;
-  position: static;
-}
-.image-3 {
-  width: 26px;
-  height: 26px;
-  position: absolute;
-  left: 1px;
-  top: -1px;
-  object-fit: cover;
-}
-.litec-1 {
-  width: 26px;
-  height: 26px;
-  position: absolute;
-  left: -117px;
-  top: -1px;
-  object-fit: cover;
-}
-.title3 {
-  display: flex;
-  flex-direction: column;
-  gap: var(--var-sds-size-space-600, 24px);
-  align-items: flex-start;
-  justify-content: flex-start;
-  width: 262px;
-  min-width: 240px;
-  position: absolute;
-  left: 32px;
-  top: 32px;
-}
-.button-list {
-  display: flex;
-  flex-direction: row;
-  gap: var(--var-sds-size-space-400, 16px);
-  align-items: center;
-  justify-content: flex-start;
-  flex-shrink: 0;
-  position: relative;
-}
-.x-logo {
-  flex-shrink: 0;
-  width: 23.98px;
-  height: 24px;
-  position: relative;
-}
-.logo-instagram {
-  flex-shrink: 0;
-  width: 24px;
-  height: 24px;
-  position: relative;
-  overflow: visible;
-}
-.logo-you-tube {
-  flex-shrink: 0;
-  width: 24px;
-  height: 24px;
-  position: relative;
-  overflow: visible;
-}
-.text-link-list {
-  display: flex;
-  flex-direction: column;
-  gap: var(--var-sds-size-space-300, 12px);
-  align-items: flex-start;
-  justify-content: flex-start;
-  width: 262px;
-  position: absolute;
-  left: 310px;
-  top: 32px;
-}
-.title4 {
-  padding: 0px 0px var(--var-sds-size-space-400, 16px) 0px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  align-items: flex-start;
-  justify-content: flex-start;
-  align-self: stretch;
-  flex-shrink: 0;
-  position: relative;
-}
-.text-strong {
-  display: flex;
-  flex-direction: row;
-  gap: 0px;
-  align-items: flex-start;
-  justify-content: flex-start;
-  align-self: stretch;
-  flex-shrink: 0;
-  position: relative;
-}
-.text-strong2 {
-  color: var(--var-sds-color-text-default-default, #1e1e1e);
-  text-align: left;
-  font-family: var(--body-strong-font-family, "Inter-SemiBold", sans-serif);
-  font-size: var(--body-strong-font-size, 16px);
-  line-height: var(--body-strong-line-height, 140%);
-  font-weight: var(--body-strong-font-weight, 600);
-  position: relative;
-}
-.text-link-list2 {
-  display: flex;
-  flex-direction: column;
-  gap: var(--var-sds-size-space-300, 12px);
-  align-items: flex-start;
-  justify-content: flex-start;
-  width: 262px;
-  position: absolute;
-  left: 588px;
-  top: 32px;
-}
-.group-19 {
-  position: absolute;
-  inset: 0;
-}
-.logo-bw-1 {
-  width: 100px;
-  height: 100px;
-  position: absolute;
-  left: 979px;
-  top: -10px;
-  object-fit: cover;
-}
-.group-10 {
-  width: 127px;
-  height: 29px;
-  position: static;
-}
-.unplugged {
-  color: #000000;
-  text-align: left;
-  font-family: "Inter-Bold", sans-serif;
-  font-size: 24px;
-  line-height: 120%;
-  font-weight: 700;
-  position: absolute;
-  left: 1049px;
-  top: 25px;
-}
-.group-14 {
-  width: 194px;
-  height: 20px;
-  position: static;
-}
-.copyright-2025-unplugged {
-  color: #000000;
-  text-align: left;
-  font-family: var(--body-small-font-family, "Inter-Regular", sans-serif);
-  font-size: var(--body-small-font-size, 14px);
-  line-height: var(--body-small-line-height, 140%);
-  font-weight: var(--body-small-font-weight, 400);
-  position: absolute;
-  left: 982px;
-  top: 53px;
-}
-.image-4 {
-  width: 14px;
-  height: 14px;
-  position: absolute;
-  right: 135px;
-  top: 56px;
-  object-fit: cover;
-}
-.frame-7 {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-shrink: 0;
-  width: 1200px;
-  height: 96px;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-}
-.header {
-  background: var(--var-sds-color-background-positive-secondary, #cff7d3);
-  border-style: solid;
-  border-color: var(--var-sds-color-border-default-default, #d9d9d9);
-  border-width: 0px 0px 1px 0px;
-  padding: var(--var-sds-size-space-800, 32px);
-  display: flex;
-  flex-direction: row;
-  gap: var(--var-sds-size-space-600, 24px);
-  row-gap: 0px;
-  align-items: center;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  align-content: center;
-  flex-shrink: 0;
-  width: var(--var-sds-responsive-device-width, 1200px);
-  height: 99px;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  overflow: hidden;
-}
-.navigation-pill-list {
-  display: flex;
-  flex-direction: row;
-  gap: var(--var-sds-size-space-200, 8px);
-  row-gap: 8px;
-  align-items: flex-start;
-  justify-content: flex-end;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  flex: 1;
-  position: relative;
-}
-.navigation-pill {
-  border-radius: var(--var-sds-size-radius-200, 8px);
-  padding: var(--var-sds-size-space-200, 8px);
-  display: flex;
-  flex-direction: row;
-  gap: var(--var-sds-size-space-200, 8px);
-  align-items: center;
-  justify-content: center;
-  flex-shrink: 0;
-  position: relative;
-}
-.title5 {
-  color: var(--var-sds-color-text-default-default, #1e1e1e);
-  text-align: left;
-  font-family: var(
-    --single-line-body-base-font-family,
-    "Inter-Regular",
-    sans-serif
-  );
-  font-size: var(--single-line-body-base-font-size, 16px);
-  line-height: var(--single-line-body-base-line-height, 100%);
-  font-weight: var(--single-line-body-base-font-weight, 400);
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-}
-.header-auth {
-  display: flex;
-  flex-direction: row;
-  gap: var(--var-sds-size-space-300, 12px);
-  align-items: center;
-  justify-content: flex-start;
-  flex-shrink: 0;
-  position: relative;
-}
-.button {
-  background: var(--var-sds-color-background-neutral-tertiary, #e3e3e3);
-  border-radius: var(--var-sds-size-radius-200, 8px);
-  border-style: solid;
-  border-color: var(--var-sds-color-border-neutral-secondary, #767676);
-  border-width: 1px;
-  padding: var(--var-sds-size-space-200, 8px);
-  display: flex;
-  flex-direction: row;
-  gap: var(--var-sds-size-space-200, 8px);
-  align-items: center;
-  justify-content: center;
-  flex-shrink: 0;
-  position: relative;
-  overflow: hidden;
-}
-.button2 {
-  color: var(--var-sds-color-text-default-default, #1e1e1e);
-  text-align: left;
-  font-family: var(
-    --single-line-body-base-font-family,
-    "Inter-Regular",
-    sans-serif
-  );
-  font-size: var(--single-line-body-base-font-size, 16px);
-  line-height: var(--single-line-body-base-line-height, 100%);
-  font-weight: var(--single-line-body-base-font-weight, 400);
-  position: relative;
-}
-.button3 {
-  background: var(--var-sds-color-background-brand-default, #2c2c2c);
-  border-radius: var(--var-sds-size-radius-200, 8px);
-  border-style: solid;
-  border-color: var(--var-sds-color-border-brand-default, #2c2c2c);
-  border-width: 1px;
-  padding: var(--var-sds-size-space-200, 8px);
-  display: flex;
-  flex-direction: row;
-  gap: var(--var-sds-size-space-200, 8px);
-  align-items: center;
-  justify-content: center;
-  flex-shrink: 0;
-  position: relative;
-  overflow: hidden;
-}
-.button4 {
-  color: var(--var-sds-color-text-brand-on-brand, #f5f5f5);
-  text-align: left;
-  font-family: var(
-    --single-line-body-base-font-family,
-    "Inter-Regular",
-    sans-serif
-  );
-  font-size: var(--single-line-body-base-font-size, 16px);
-  line-height: var(--single-line-body-base-line-height, 100%);
-  font-weight: var(--single-line-body-base-font-weight, 400);
-  position: relative;
-}
-.group-6 {
-  flex-shrink: 0;
-  width: 201px;
-  height: 96px;
-  position: static;
-}
-.group-1 {
-  width: 97px;
-  height: 96px;
-  position: static;
-}
-.logo-1 {
-  width: 97px;
-  height: 96px;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-}
-.logo-12 {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  right: 0%;
-  left: 0%;
-  bottom: 0%;
-  top: 0%;
-  object-fit: cover;
-}
-.unplugged2 {
-  color: var(--var-sds-color-text-default-default, #1e1e1e);
-  text-align: left;
-  font-family: var(--heading-font-family, "Inter-SemiBold", sans-serif);
-  font-size: var(--heading-font-size, 24px);
-  line-height: var(--heading-line-height, 120%);
-  letter-spacing: var(--heading-letter-spacing, -0.02em);
-  font-weight: var(--heading-font-weight, 600);
-  position: absolute;
-  left: 80px;
-  top: 33px;
 }
