--- a/Website/CSS/loc_single.css
+++ b/Website/CSS/loc_single.css
@@ -10,7 +10,6 @@ main {
   box-sizing: border-box;
 }
 .place-single {
-  background: var(--var-sds-color-background-default-default, #ffffff);
   display: flex;
   flex-direction: column;
   gap: 0px;
@@ -21,13 +20,19 @@ main {
   overflow: hidden;
 }
 .hero-basic {
-  background: var(--var-sds-color-background-default-secondary, #f5f5f5);
+  background-image: url(../img/loc_short/loc2/outside1.png);
+  background-repeat: no-repeat;
+  background-color: black;
+  background-size: 100% 100%;
   padding: var(--var-sds-size-space-4000, 160px)
-    var(--var-sds-size-space-1600, 64px) var(--var-sds-size-space-4000, 160px)
+    var(--var-sds-size-space-1600, 128px) var(--var-sds-size-space-4000, 160px)
     var(--var-sds-size-space-1600, 64px);
+    filter: blur(4px);
+    -webkit-filter: blur(4px);
   display: flex;
   flex-direction: column;
   gap: 0px;
+  height: 500px;
   align-items: center;
   justify-content: flex-start;
   align-self: stretch;
@@ -35,6 +40,12 @@ main {
   position: relative;
 }
 .text-content-title {
+  font-weight: bold;
+  left: 50%;
+  transform: translate(-50%, -200%);
+  width: 80%;
+  padding: 20px;
+  text-align: center;
   display: flex;
   flex-direction: column;
   gap: var(--var-sds-size-space-200, 8px);
@@ -45,6 +56,7 @@ main {
 }
 .place-title {
   color: var(--var-sds-color-text-default-default, #1e1e1e);
+  -webkit-text-stroke: 2px white;
   text-align: center;
   font-family: var(--title-hero-font-family, "Inter-Bold", sans-serif);
   font-size: var(--title-hero-font-size, 72px);
@@ -56,6 +68,7 @@ main {
 }
 .place-subtitle {
   color: var(--var-sds-color-text-default-secondary, #757575);
+  -webkit-text-stroke: 0.25px gray;
   text-align: center;
   font-family: var(--subtitle-font-family, "Inter-Regular", sans-serif);
   font-size: var(--subtitle-font-size, 32px);
@@ -68,9 +81,8 @@ main {
   justify-content: center;
 }
 .panel-image-double {
-  background: var(--var-sds-color-background-default-default, #ffffff);
-  opacity: 0.8;
   padding: var(--var-sds-size-space-1600, 64px);
+  padding-top: 0;
   display: flex;
   flex-direction: row;
   gap: var(--var-sds-size-space-1200, 48px);
@@ -81,11 +93,11 @@ main {
   height: 478px;
   position: relative;
 }
-.image {
-  background: var(
-    --image-placeholder,
-    linear-gradient(to left, #e3e3e3, #e3e3e3)
-  );
+.image1 {
+  background-image: url(../img/loc_short/loc2/outside2.png);
+  background-repeat: no-repeat;
+  background-color: black;
+  background-size: 100% 100%;
   display: flex;
   flex-direction: column;
   gap: 0px;
@@ -97,6 +109,23 @@ main {
   overflow: hidden;
   object-fit: cover;
 }
+.image2 {
+  background-image: url(../img/loc_short/loc2/inside.png);
+  background-repeat: no-repeat;
+  background-color: black;
+  background-size: 100% 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  align-items: center;
+  justify-content: center;
+  align-self: stretch;
+  flex: 1;
+  position: relative;
+  overflow: hidden;
+  object-fit: cover;
+}
+
 .body {
   background: #ffffff;
   display: flex;
@@ -108,19 +137,17 @@ main {
   width: 1150px;
   height: 303px;
   min-width: 160px;
-  position: absolute;
+  position: relative;
   left: 25px;
-  top: 1026px;
 }
 .text {
   display: flex;
   flex-direction: column;
-  gap: var(--var-sds-size-space-200, 8px);
   align-items: flex-start;
   justify-content: flex-start;
   align-self: stretch;
   flex-shrink: 0;
-  height: 147px;
+  height: 100%;
   position: relative;
 }
 .title2 {
